Adding focusMe Directive for the first input in edit.html

--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -2,7 +2,7 @@
 	<ion-content>
 		<div class="list card">
 			<div class="item item-input">
-				<input type="text" ng-model="user.name"/>
+				<input type="text" ng-model="user.name" focus-me/>
 			</div>
 			<div class="item item-input">
 				<input type="text" ng-model="user.age"/>
